ENTRYSTORE-627 #comment Improved handling of ACS URL